--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+
+body{
+	overflow: hidden;
+}
+
 #viewport{
 	position: absolute;
 	top: 50px;
@@ -8,4 +13,24 @@ canvas{
 	position:absolute;
 	top:0px;
 	left:0px;
+}
+
+.loading{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(255, 255, 255, 0.7);
+	color: black; 
+	z-index: 1000000000000;
+}
+
+.loading .text{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	color: black;
 }
